<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="adas_driving">智能行车</string>
    <string name="afternoon">下午</string>
    <string name="aiqiyi">爱奇艺</string>
    <string name="air_conditioner">空调</string>
    <string name="air_conditioner_interface">空调界面</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_center">应用中心</string>
    <string name="app_name">Launcher</string>
    <string name="app_store">应用商店</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="average_energy">平均能耗</string>
    <string name="avm">360环视</string>
    <string name="bluetooth_contacts_permission">"请保持手机蓝牙设置中
通话权限已打开"</string>
    <string name="bluetooth_contacts_sync_failed">"请检查手机蓝牙通讯录
授权状态"</string>
    <string name="bluetooth_disconnected">蓝牙未连接</string>
    <string name="bluetooth_syncing">同步中···</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="brvah_load_complete">点击加载更多</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="bt_call">电话</string>
    <string name="bt_music">蓝牙音乐</string>
    <string name="calllog_date_format">%1$s/%2$s/%3$s</string>
    <string name="calllog_day_format">%1$s/%2$s</string>
    <string name="calllog_hour_format">小时前</string>
    <string name="calllog_min_format">分钟前</string>
    <string name="calllog_second_format">刚刚</string>
    <string name="car_link">ICCOA CarLink</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="charge">充电站</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="control_settings">控制中心</string>
    <string name="control_settings2">负一屏</string>
    <string name="date_after_tomorrow">后天</string>
    <string name="date_today">今天</string>
    <string name="date_tomorrow">明天</string>
    <string name="demo">演示模式</string>
    <string name="driver_heating">主驾加热</string>
    <string name="driver_ventilation">主驾通风</string>
    <string name="driving">辅助行车</string>
    <string name="driving_assistance_settings">驾驶辅助设置</string>
    <string name="driving_distance">驾驶里程</string>
    <string name="driving_mode">驾驶模式</string>
    <string name="driving_mode_eco">经济</string>
    <string name="driving_mode_eco_plus">经济+</string>
    <string name="driving_mode_personal">个性化</string>
    <string name="driving_mode_sport">运动</string>
    <string name="driving_mode_standard">标准</string>
    <string name="driving_settings">驾驶设置</string>
    <string name="dvr">行车记录仪</string>
    <string name="early_morning">凌晨</string>
    <string name="energy_center">能量中心</string>
    <string name="energy_settings">能量设置</string>
    <string name="error_icon_content_description">Error</string>
    <string name="evening">晚上</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="friday">周五</string>
    <string name="go_home">回到桌面</string>
    <string name="hi_car">HUAWEI HiCar</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hint_360_open_disable_when_adas_open">行车功能已激活，全景影像无法开启</string>
    <string name="hint_please_choose_app_new_wallpaper">请先选择应用新壁纸</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="item_view_role_description">Tab</string>
    <string name="km">公里</string>
    <string name="kuwo">酷我音乐</string>
    <string name="light_settings">灯光设置</string>
    <string name="local_radio">本地电台</string>
    <string name="m3_ref_typeface_brand_display_regular">sans-serif</string>
    <string name="m3_ref_typeface_brand_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_brand_regular">sans-serif</string>
    <string name="m3_ref_typeface_plain_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_plain_regular">sans-serif</string>
    <string name="m3_sys_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_typescale_body_large_font">sans-serif</string>
    <string name="m3_sys_typescale_body_medium_font">sans-serif</string>
    <string name="m3_sys_typescale_body_small_font">sans-serif</string>
    <string name="m3_sys_typescale_display_large_font">sans-serif</string>
    <string name="m3_sys_typescale_display_medium_font">sans-serif</string>
    <string name="m3_sys_typescale_display_small_font">sans-serif</string>
    <string name="m3_sys_typescale_headline_large_font">sans-serif</string>
    <string name="m3_sys_typescale_headline_medium_font">sans-serif</string>
    <string name="m3_sys_typescale_headline_small_font">sans-serif</string>
    <string name="m3_sys_typescale_label_large_font">sans-serif-medium</string>
    <string name="m3_sys_typescale_label_medium_font">sans-serif-medium</string>
    <string name="m3_sys_typescale_label_small_font">sans-serif-medium</string>
    <string name="m3_sys_typescale_title_large_font">sans-serif</string>
    <string name="m3_sys_typescale_title_medium_font">sans-serif-medium</string>
    <string name="m3_sys_typescale_title_small_font">sans-serif-medium</string>
    <string name="maintenance_settings">车辆保养设置</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">"%1$s o'clock"</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_clock_mode_description">Switch to clock mode for the time input.</string>
    <string name="material_timepicker_hour">Hour</string>
    <string name="material_timepicker_minute">Minute</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="material_timepicker_select_time">Select time</string>
    <string name="material_timepicker_text_input_mode_description">Switch to text input mode for the time input.</string>
    <string name="message_box">消息盒子</string>
    <string name="meter">米</string>
    <string name="midday">中午</string>
    <string name="monday">周一</string>
    <string name="morning">上午</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_content_description">More than %1$d new notifications</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">OK</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="passenger_heating">副驾加热</string>
    <string name="passenger_ventilation">副驾通风</string>
    <string name="qq">QQ音乐</string>
    <string name="travel_brief_title">上次行车</string>
    <string name="usb_music">USB音乐</string>
    <string name="widget_media_tab_bt">蓝牙音乐</string>
    <string name="widget_media_tab_kw">酷我音乐</string>
    <string name="widget_media_tab_qq">音乐</string>
    <string name="widget_media_tab_qq_en">QQ</string>
    <string name="widget_media_tab_radio">本地电台</string>
    <string name="widget_media_tab_usb">USB音乐</string>
    <string name="widget_media_tab_xmly">喜马拉雅</string>
    <string name="widget_travel_without_data">暂无数据</string>
    <string name="xmly_music">喜马拉雅</string>
</resources>