<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="@dimen/dp_520" android:layout_height="@dimen/dp_168"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/sp_24" android:textColor="@color/text_color" android:id="@id/tvTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_18" android:text="@string/travel_brief_title" android:layout_marginStart="@dimen/dp_36" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/EN.Bold" />
    <TextView android:textSize="@dimen/sp_23" android:textColor="@color/text_color" android:id="@id/tvInfoLeft" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginHorizontal="@dimen/dp_4" app:layout_constraintBottom_toTopOf="@id/tvInfoLeftDesc" app:layout_constraintEnd_toStartOf="@id/tvInfoUnit" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="@id/tvInfoLeftDesc" app:layout_constraintTop_toBottomOf="@id/tvTitle" style="@style/EN.Bold" />
    <TextView android:textSize="@dimen/sp_20" android:textColor="@color/text_color" android:id="@id/tvInfoUnit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="km" android:layout_marginHorizontal="@dimen/dp_4" app:layout_constraintBaseline_toBaselineOf="@id/tvInfoLeft" app:layout_constraintEnd_toEndOf="@id/tvInfoLeftDesc" app:layout_constraintStart_toEndOf="@id/tvInfoLeft" />
    <TextView android:textSize="@dimen/sp_21" android:textColor="@color/text_color" android:id="@id/tvInfoLeftDesc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/driving_distance" android:alpha="0.8" android:layout_marginStart="@dimen/dp_88" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/tvInfoRightDesc" app:layout_constraintHorizontal_chainStyle="spread_inside" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvInfoLeft" />
    <TextView android:textSize="@dimen/sp_21" android:textColor="@color/text_color" android:id="@id/tvInfoRightDesc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/average_energy" android:alpha="0.8" android:layout_marginEnd="@dimen/dp_88" app:layout_constraintBaseline_toBaselineOf="@id/tvInfoLeftDesc" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/tvInfoLeftDesc" />
    <TextView android:textSize="@dimen/sp_23" android:textColor="@color/text_color" android:id="@id/tvInfoRight" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBaseline_toBaselineOf="@id/tvInfoLeft" app:layout_constraintEnd_toEndOf="@id/tvInfoRightDesc" app:layout_constraintStart_toStartOf="@id/tvInfoRightDesc" style="@style/EN.Bold" />
    <androidx.constraintlayout.widget.Group android:id="@id/groupData" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" app:constraint_referenced_ids="tvInfoLeft,tvInfoRight,tvInfoUnit,tvInfoLeftDesc,tvInfoRight,tvInfoRightDesc" />
    <ImageView android:id="@id/imgLoading" android:layout_width="@dimen/dp_100" android:layout_height="@dimen/dp_100" android:src="@drawable/icon_widgets_no_data" android:layout_marginStart="@dimen/dp_30" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvTitle" />
    <TextView android:textSize="@dimen/sp_24" android:textColor="@color/text_color_voice_assistant_title" android:id="@id/tvInfo" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/widget_travel_without_data" android:layout_marginStart="@dimen/dp_40" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/imgLoading" app:layout_constraintTop_toTopOf="@id/tvTitle" style="@style/EN.Regular" />
</androidx.constraintlayout.widget.ConstraintLayout>
