<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/layout" android:background="@drawable/bg_heating" android:layout_width="@dimen/dp_520" android:layout_height="@dimen/dp_168"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.utils.widget.ImageFilterView android:id="@id/imgLeftVentilate" android:layout_width="@dimen/dp_68" android:layout_height="@dimen/dp_68" app:layout_constraintBottom_toTopOf="@id/tvLeftVentilate" app:layout_constraintEnd_toStartOf="@id/imgLeftHeating" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_chainStyle="packed" app:srcCompat="@drawable/icon_seat_ventilate_l_off" />
    <androidx.constraintlayout.utils.widget.ImageFilterView android:id="@id/imgLeftHeating" android:layout_width="@dimen/dp_68" android:layout_height="@dimen/dp_68" app:layout_constraintBottom_toBottomOf="@id/imgLeftVentilate" app:layout_constraintEnd_toStartOf="@id/guideline" app:layout_constraintStart_toEndOf="@id/imgLeftVentilate" app:layout_constraintTop_toTopOf="@id/imgLeftVentilate" app:srcCompat="@drawable/icon_seat_heating_l_off" />
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guideline" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintGuide_percent="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <androidx.constraintlayout.utils.widget.ImageFilterView android:id="@id/imgRightVentilate" android:layout_width="@dimen/dp_68" android:layout_height="@dimen/dp_68" app:layout_constraintBottom_toBottomOf="@id/imgLeftVentilate" app:layout_constraintEnd_toStartOf="@id/imgRightHeating" app:layout_constraintStart_toEndOf="@id/guideline" app:layout_constraintTop_toTopOf="@id/imgLeftVentilate" app:srcCompat="@drawable/icon_seat_ventilate_r_off" />
    <androidx.constraintlayout.utils.widget.ImageFilterView android:id="@id/imgRightHeating" android:layout_width="@dimen/dp_68" android:layout_height="@dimen/dp_68" app:layout_constraintBottom_toBottomOf="@id/imgLeftVentilate" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/imgRightVentilate" app:layout_constraintTop_toTopOf="@id/imgLeftVentilate" app:srcCompat="@drawable/icon_seat_heating_r_off" />
    <TextView android:textSize="@dimen/sp_20" android:textColor="@color/text_color" android:id="@id/tvLeftVentilate" android:paddingTop="@dimen/dp_22" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/driver_ventilation" android:alpha="0.8" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@id/imgLeftVentilate" app:layout_constraintStart_toStartOf="@id/imgLeftVentilate" app:layout_constraintTop_toBottomOf="@id/imgLeftVentilate" />
    <TextView android:textSize="@dimen/sp_20" android:textColor="@color/text_color" android:id="@id/tvLeftHeating" android:paddingTop="@dimen/dp_22" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/driver_heating" android:alpha="0.8" app:layout_constraintBaseline_toBaselineOf="@id/tvLeftVentilate" app:layout_constraintEnd_toEndOf="@id/imgLeftHeating" app:layout_constraintStart_toStartOf="@id/imgLeftHeating" />
    <TextView android:textSize="@dimen/sp_20" android:textColor="@color/text_color" android:id="@id/tvRightVentilate" android:paddingTop="@dimen/dp_22" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/passenger_ventilation" android:alpha="0.8" app:layout_constraintBaseline_toBaselineOf="@id/tvLeftVentilate" app:layout_constraintEnd_toEndOf="@id/imgRightVentilate" app:layout_constraintStart_toStartOf="@id/imgRightVentilate" />
    <TextView android:textSize="@dimen/sp_20" android:textColor="@color/text_color" android:id="@id/tvRightHeating" android:paddingTop="@dimen/dp_22" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/passenger_heating" android:alpha="0.8" app:layout_constraintBaseline_toBaselineOf="@id/tvLeftVentilate" app:layout_constraintEnd_toEndOf="@id/imgRightHeating" app:layout_constraintStart_toStartOf="@id/imgRightHeating" />
</androidx.constraintlayout.widget.ConstraintLayout>
